public/less/styles.less
// Import customized bootstrap files
@import "bootstrap.less";
// @import "responsive.less";

// Transition function for bezier love
@cubic: cubic-bezier(0.665, 0, 0.43, 1);

// z-indexes
@zindexMap: 1;
@zindexOverMap: 5;

// Make something be over the primary map
.over-map {
    position: relative;
    z-index: @zindexOverMap;
}

html, body {
    height: 100%;
    background-color: #fbfbfb;
}

body {
    position: relative;
    overflow: hidden;
}

form {
    margin: 0;
    text-align: left;
    padding: 12px;
}

#safety {
    position: absolute;
    top: 15px;
    right: 15px;
}

header {
    padding: 10px 0;
    position: relative;
    z-index: @zindexOverMap + 1;
    .box-shadow(0 4px 0 rgba(0,0,0, 0.18));

    h1 {
        margin: 0;
        margin-left: @fluidGridGutterWidth;
    }

    &.masthead.transition {
        .transition(padding 1.2s @cubic);
    }
}

.faded {
    > div {
        .opacity(65);
        -webkit-filter: blur(2px);
        .transition(opacity 0.4s @cubic);
    }

    &.in > div {
        -webkit-filter: none;
        .opacity(100);
    }
}

/**
 * Route controls
 */

.controls {
    z-index: @zindexOverMap + 1;
    .box-shadow(0 -4px 0 rgba(0,0,0,0.15));
}

.route-wrapper {
    position: relative;
    width: 90%;
    max-width: 1200px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.route-wrapper.header {
    width: auto;
}

.route-info {
	text-align: center;
	position: relative;
	top: 17px;
}

.route-info .label {
	font-size: 18px;
}

.route-controls {
    @routeInputFontSize: 20px;

    display: inline-block !important;
    width: 100%;
    
    .transition(all 1.2s @cubic);

    .control-group {
        display: inline-block;
        vertical-align: baseline;
        margin-bottom: 0;
    }

    .input-prepend {
        position: relative;
        margin-bottom: 0;

        .add-on,
        input {
            font-size: @routeInputFontSize;
            padding-top: 10px;
            padding-bottom: 10px;
        }

        .add-on {
            width: 17px;
            .border-radius(2px 0 0 2px);
        }

        input {
            .border-radius(0 2px 2px 0);
            width: auto;
            position: absolute;
            right: 0;
            left: 27px;
        }
    }

    label {
        display: block;
    }

    .btn {
        width: 100%;
        font-size: @routeInputFontSize - 2px;
    }

    .halp {
        display: none;
    }

    &.overlay {
        position: absolute;
        width: 100%;
        margin: 0;
        z-index: @zindexOverMap + 1;
        top: 100px;

        .halp {
            display: block;
            color: #fff;

            h2 {
                text-align: left;
                text-shadow: 0 0 8px rgba(0,0,0, 0.8);
            }
        }

        @media (min-width: 481px) {
            label.halp {
                display: none;
            }
        }

        figure {
            padding: 10px;
            background: #fff;
            .border-radius(6px);
            border: 1px solid #333
            margin: 0;
        }

        form {
            overflow: hidden;
            .transition(background-color 0.4s @cubic);
            background: rgba(0,0,0,0.5);
            .border-radius(5px);
            padding: 20px;
        }
    }
}

/**
 * Map and Street View canvas
 */

.canvas {
    position: relative;
    background-color: #333;
    .transition(all 0.7s);
}

// In the corner
.secondary {
    position: absolute;
    top: 20px;
    right: 25px;
    min-height: 250px;
    min-width: 250px;
    width: 25%;
    height: 25%;
    z-index: @zindexOverMap;
    .box-shadow(4px 4px 4px rgba(0,0,0, 0.48));
    border: solid 6px white;
    display:none;
}

// huuuge
.primary {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 100%;
}

// Prevent max-width from affecting Google Maps
.gmap img {
    max-width: none;
}

.controls {
    position: absolute;
    bottom: 0;
    height: 40px; //@fluidGridColumnWidth + @fluidGridGutterWidth;
    width: 100%;
    padding: 10px 10px 0px 10px;
    margin-bottom: 10px;
}


.progress {
    margin: 0;
    position: absolute;
    bottom: 0;
    right: 40px;
    height: 100%;
    left: 200px;

    table {
        width: 100%;
        height: 100%;
        border-collapse: separate;
        border-spacing: 0 5px;
    }

    td {
        .box-shadow(inset 0 0 2px rgba(0, 0, 0, 0.5));
        .transition(border 0.4s @cubic);
        border-top: 5px solid #fff;
    }

   .highlighted {
        border-top-width: 0;
        .border-top-left-radius(4px);
        .border-top-right-radius(4px);
   }
}

.red {
    background-color: #E5F5E0;

    &.highlighted {
        background-color: spin(lighten(#E5F5E0, 3%), -4);
    }
}

.yellow {
    background-color: #A1D99B;

    &.highlighted {
        background-color: spin(lighten(#A1D99B, 3%), -4);
    }
}

.green {
    background-color: #31A354;

    &.highlighted {
        background-color: spin(lighten(#31A354, 3%), -4);
    }
}

#route-info {
  top: 218px;
  background: black;
  color: white;
  opacity: 0.8;
  padding: 6px;
  width: 100%;
  display: none;
}

#route-info .link {
  margin-left: 10px;
}

